# mac-game-port-installer

./: .gitignore  Game Port Installer.command  GamePortInstaller.spec  build.sh  games.py  installer.py  main.py  make_release.sh  pyproject.toml  requirements.txt  settings.py  zelda3_config.py  zsnes_theme.py
Game Port Installer.app/Contents/: Info.plist
Game Port Installer.app/Contents/MacOS/: Game Port Installer
Game Port Installer.app/Contents/Resources/: mgp-icon.icns
assets/: AppIcon.icns
configs/: animalcrossing.py  perfectdark.py  supermarioworld.py  supermetroid.py  zelda3.py
scrapers/: __init__.py  base.py  github.py  github_source.py  t3hd0gg.py
