[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mac-game-port-installer"
version = "0.1.0"
description = "macOS GUI for installing, updating, and launching game ports and recompilations"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.5"]

[project.scripts]
game-port-installer = "main:main"
